# nes_emulator

./: CMakeLists.txt  README.md
app_basic/: CMakeLists.txt  main.cpp  ncurses_io.cpp  ncurses_io.h
app_nes/: CMakeLists.txt  audio_stream.cpp  audio_stream.h  bulk_queue.h  game_runner.cpp  game_runner.h  keyboard_controller.cpp  keyboard_controller.h  main.cpp  main_window.cpp  main_window.h
app_test/: CMakeLists.txt  main.cpp  test2.h  unit_stubs.h
app_test/test1/: README.md  test1.h
app_test/test2/: README.md
emu/: CMakeLists.txt
emu/include/emu/: address.h  constants.h  fwd.h  mapper.h
emu/include/emu/address/: absolute_address.h  abstract_address.h  address_mask.h  arithmetic_address_mixin.h  concepts.h  fixed_page_address.h  page.h  raw_address.h  same_page_address.h
emu/include/emu/apu/: channel_base.h  noise_channel.h  pulse_channel.h  triangle_channel.h  types.h  vapu.h
emu/include/emu/bus/: bus_word_access_mixin.h  memory_only_bus.h  nes_system_bus.h  random_access_memory.h
emu/include/emu/controller/: buttons.h  vcontroller.h
emu/include/emu/cpu/: addressing_mode_tags.h  disassembler.h  effective_address.h  exceptions.h  fwd.h  instruction_tags.h  interrupt_signal.h  ivt_traits.h  num_cycles.h  opcode_decoder.h  operand.h  operand_access.h  status_register.h  status_register_flags.h  vcpu.h  vcpu_state.h
emu/src/apu/: channel_base.cpp  noise_channel.cpp  pulse_channel.cpp  triangle_channel.cpp  types.cpp  vapu.cpp
emu/src/bus/: random_access_memory.cpp
emu/src/controller/: vcontroller.cpp
emu/src/cpu/: exceptions.cpp  status_register.cpp  vcpu_base.cpp
emu/src/file/: bin_file.cpp  nes_file.cpp  nes_file_flags.cpp
emu/src/mapper/: mapper_000_nrom.cpp  mapper_001_mmc1.cpp  mapper_002_uxrom.cpp  mapper_number.cpp
emu/src/ppu/: cycle_counter.cpp  frame_buffer.cpp  scanline_counter.cpp  types.cpp  vppu_base.cpp
include/emu/: address.h  test.h  types.h  utility.h
include/emu/address/: absolute_address.h  fixed_page_address.h  linear_address.h  raw_address.h  same_page_address.h  types.h
include/emu/bus/: system_bus.h
include/emu/cpu/: addressing_modes.h  instruction_tags.h  operand.h
include/emu/test/: assertion.h  output.h  test_case.h  test_subcase.h  types.h
src/test/: test_case.cpp  test_subcase.cpp
tests/: main.cpp  test_address.cpp
(+80 files in other folders)
